--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.shardingsphere.datasource.names=ds0,ds1
+spring.shardingsphere.datasource.names=ds0,ds1,ds2
 
 spring.shardingsphere.datasource.ds0.type=com.zaxxer.hikari.HikariDataSource
 spring.shardingsphere.datasource.ds0.driver-class-name=oracle.jdbc.OracleDriver
@@ -12,10 +12,18 @@ spring.shardingsphere.datasource.ds1.jdbc-url=jdbc:oracle:thin:@192.168.1.205:15
 spring.shardingsphere.datasource.ds1.username=db1
 spring.shardingsphere.datasource.ds1.password=123456
 
-spring.shardingsphere.sharding.default-database-strategy.inline.sharding-column=user_id
-spring.shardingsphere.sharding.default-database-strategy.inline.algorithm-expression=ds$->{user_id % 2}
+spring.shardingsphere.datasource.ds2.type=com.zaxxer.hikari.HikariDataSource
+spring.shardingsphere.datasource.ds2.driver-class-name=oracle.jdbc.OracleDriver
+spring.shardingsphere.datasource.ds2.jdbc-url=jdbc:oracle:thin:@192.168.1.205:1521:orclutf8
+spring.shardingsphere.datasource.ds2.username=db2
+spring.shardingsphere.datasource.ds2.password=123456
 
-spring.shardingsphere.sharding.tables.usertest.actual-data-nodes=ds$->{0..1}.usertest$->{0..1}
+#根据id来区分表
+spring.shardingsphere.sharding.default-database-strategy.inline.sharding-column=id
+spring.shardingsphere.sharding.default-database-strategy.inline.algorithm-expression=ds$->{id % 3}
+#spring.shardingsphere.sharding.default-database-strategy.standard.precise-algorithm-class-name=com.funtl.apache.shardingsphere.config.PreciseModuloShardingDatabaseAlgorithm
+
+spring.shardingsphere.sharding.tables.usertest.actual-data-nodes=ds$->{0..2}.usertest$->{0..1}
 spring.shardingsphere.sharding.tables.usertest.table-strategy.inline.sharding-column=user_id
 spring.shardingsphere.sharding.tables.usertest.table-strategy.inline.algorithm-expression=usertest$->{user_id % 2}
 
