--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,10 +22,13 @@ spring.shardingsphere.datasource.ds2.password=123456
 spring.shardingsphere.sharding.default-database-strategy.inline.sharding-column=id
 spring.shardingsphere.sharding.default-database-strategy.inline.algorithm-expression=ds$->{id % 3}
 #spring.shardingsphere.sharding.default-database-strategy.standard.precise-algorithm-class-name=com.funtl.apache.shardingsphere.config.PreciseModuloShardingDatabaseAlgorithm
+#配置没有分片规则的表， 从哪个数据源读取
+spring.shardingsphere.sharding.default-data-source-name=ds0
 
 spring.shardingsphere.sharding.tables.usertest.actual-data-nodes=ds$->{0..2}.usertest$->{0..1}
 spring.shardingsphere.sharding.tables.usertest.table-strategy.inline.sharding-column=user_id
 spring.shardingsphere.sharding.tables.usertest.table-strategy.inline.algorithm-expression=usertest$->{user_id % 2}
+
 
 spring.main.allow-bean-definition-overriding=true
 mybatis.type-aliases-package= com.funtl.apache.shardingsphere.domain
